Fix wrong size of window control icons for 1.5 device pixel ratio

--- a/src/style.css
+++ b/src/style.css
@@ -109,6 +109,13 @@ body {
   height: 100%;
 }
 
+@media (-webkit-device-pixel-ratio: 1.5), (device-pixel-ratio: 1.5) {
+  #window-controls .icon {
+    width: 10px;
+    height: 10px;
+  }
+}
+
 #window-controls .button {
   user-select: none;
   cursor: default;
